# Chess-Socket

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.c  init.c  main.c
engine/: attack.c  bitboards.c  board.c  data.c  defs.h  hashkeys.c  init.c  io.c  main.c  makemove.c  movegen.c  perft.c  validate.c  wincheck.c
gui/: draw.c  draw.h  init.h  initSDL.c  main.c  mainGUI.c  move.c  move.h
gui/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
server/: server.c
